DEX-1055-load-tests-4